--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,6 @@ JWT_REFRESH_SECRET=
 
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_DATABASE=my_domains_db
-# POSTGRES_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:$(POSTGRES_PORT)/${POSTGRES_DATABASE}?sslmode=disable
+POSTGRES_DATABASE=
 POSTGRES_HOST=
 POSTGRES_PORT=
