--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - postgres
     env_file:
       - .env
+    networks:
+      - myDomainNetwork
     
     
   postgres:
@@ -20,11 +22,9 @@ services:
       - 5431:5432
     env_file:
       - .env
-    volumes:
-      - postgres:/var/lib/postgresql/data
+    networks:
+      - myDomainNetwork
 
-  
-
-volumes:
-  postgres:
-    name: my-domains-db
+networks:
+  myDomainNetwork:
+    driver: bridge
